--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ override.tf.json
 # produced by macs
 .DS_Store
 
-# avi license files
+# some avi related files
 *.lic
-
 cookie-jar
+avi_config.json
